--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ keywords: ""
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: Mingzhou/Mingzhou.github.io
-github_url: https://github.com/Mingzhou
-url: https://Mingzhou.github.io
+repository: MingzhouLin/MingzhouLin.github.io
+github_url: https://github.com/MingzhouLin
+url: https://MingzhouLin.github.io
 
 ## Gem
 plugins:
